--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
            <div class="col-4">
             <div class="project_card">
                 <img class="homepage_project_image" src="images/project1.jpg"/>
-                <h4 class="project_card_name">Project 6</h4>
-                <p class="project_card_description">Media Used (eg. Photoshop)</p>
+                <h4 class="project_card_name"><a href="project6.html">Design an Alphabet</a></h4>
+                <p class="project_card_description">Photoshop</p>
             </div>
           </div>
            <div class="col-4">
