--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
            <div class="col-4">
             <div class="project_card">
                 <img class="homepage_project_image" src="images/project1.jpg"/>
-                <h4 class="project_card_name">Project 7</h4>
-                <p class="project_card_description">Media Used (eg. Photoshop)</p>
+                <h4 class="project_card_name"><a href="project7.html">ChatGPT Comic</a></h4>
+                <p class="project_card_description">ChatGPT, Procreate, and Clip Studio Paint</p>
             </div>
           </div>
           <div class="col-4">
