final commit for art 74

--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="styles/simple-grid.css">
     <link rel="stylesheet" href="styles/main.css">
 </head>
-<body>
-        <h3> this is gonna be the contact page but it isn't yet </h3>
+<body class="contact-bg">
+        <h3 class="contact-oops"> this is gonna be the contact page but it isn't ready yet, click <a href="index.html">here</a> to go back home</h3>
 </body>
