--- a/project7.html
+++ b/project7.html
@@ -9,39 +9,30 @@
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-    <div class="container">
-        <div class="row nav_bar">
-            <div class="col-4">
-                <a href="index.html">jack rich</a>
-            </div>
-
-            <div class="col-4">
-                <a href="mailto:email@gmail.com">Contact&#8594;
-                </a>
-            </div>
-
-            <div class="col-4">
-                <a href="https://www.instagram.com">Instagram &#8599;</a>
-            </div>
-        </div>
-
-
-        <div class="row project_page_description">
-            <div class="col-4">
-                <h3>Glitch Art</h3>
-                <p class="project_tools">HxD</p>
-                <p class="project_tools">Audacity</p>
-            </div>
-            <div class="col-8">
-                <p>Our first project as a class, insert the rest of the description here later.</p>
-            </div>
-      </div>
-        <div class="row">
-            <div class="col-12">
-                <img src="images/JackRich_A11.png"/ width="1000px" height="1400px">
-               <!-- <p>caption this</p> -->
-            </div>
-        </div>
-        </div>
+        <nav class="main-menu">
+    <p class="name">jack rich</p>
+    <ul>
+        <li><a href="index.html">home</a></li>
+        <li><a href="#">portfolio</a>
+            <ul>
+                <li><a href="project1.html">glitch art</a></li>
+                <li><a href="project2.html">pattern design</a></li>
+                <li><a href="project3.html">postcard project</a></li>
+                <li><a href="project4.html">photoshop collage</a></li>
+                <li><a href="project5.html">create a new species</a></li>
+                <li><a href="project6.html">design an alphabet</a></li>
+                <li><a href="project7.html">chatgpt comic art</a></li>
+                <li><a href="project8.html">12 months of horror</a></li>
+                <li><a href="project9.html">the golden record</a></li>
+            </ul>
+        </li>
+        <li><a href="contact.html">contact</a></li>
+    </ul>
+</nav>
+                <h3 class="project-title">ChatGPT Comic Art</h3>
+                <p class="project_tools">ChatGPT</p>
+                <p class="project_tools">Clip Studio Paint</p>
+                <p class="project-desc">For this project, we used ChatGPT to generate the story for a short comic, and then drew that comic. I worked with a partner, so what is presented is my half of the comic.</p>
+                <img class="project-img" src="images/JackRich_A11.png" alt="illustrated comic page depicting an unrealistic interaction between arthropods."/>
     </body>
 </html>
