--- a/project8.html
+++ b/project8.html
@@ -29,9 +29,9 @@
         <li><a href="contact.html">contact</a></li>
     </ul>
 </nav>
-                <h3 class="project-title">Photoshop Collage</h3>
-                <p class="project_tools">Photoshop</p>
-                <p class="project-desc">As an introduction to Photoshop, we made these collages in class with a set of provided images.</p>
-                <img class="project-img" src="images/JackRich_Collage.jpg" alt="Photoshop Collage"/>
+                <h3 class="project-title">12 Months of Horror</h3>
+                <p class="project_tools">Premiere Pro</p>
+                <p class="project-desc">This was a project we did to learn Premiere Pro, and video editing in general. The brief was to tell the story of a year through found media clips, I chose to combine two of my interests and make it about the history of horror movies.</p>
+                <iframe class="project-img" width="1280" height="720" src="https://www.youtube.com/embed/kXh7GQ0xHJc" title="12 Months of Horror" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </body>
 </html>
