--- a/project9.html
+++ b/project9.html
@@ -29,9 +29,10 @@
         <li><a href="contact.html">contact</a></li>
     </ul>
 </nav>
-                <h3 class="project-title">Photoshop Collage</h3>
+                <h3 class="project-title">The Golden Record</h3>
                 <p class="project_tools">Photoshop</p>
-                <p class="project-desc">As an introduction to Photoshop, we made these collages in class with a set of provided images.</p>
-                <img class="project-img" src="images/JackRich_Collage.jpg" alt="Photoshop Collage"/>
+                <p class="project_tools">Audacity</p>
+                <p class="project-desc">This was our sound based project, combining sound effects into a 2 minute whole. I chose to combine (mostly) ambient sounds that I enjoy. We also made album covers in Photoshop.</p>
+                <iframe class="project-img" width="1280" height="1091" src="https://www.youtube.com/embed/odduRTEGoHM" title="the golden record" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </body>
 </html>
