--- a/index.html
+++ b/index.html
@@ -8,98 +8,33 @@
     <link rel="stylesheet" href="styles/simple-grid.css">
     <link rel="stylesheet" href="styles/main.css">
 </head>
-<body>
+<body class="home-bg">
 
-
-    <div class="container">
-        <div class="row nav_bar">
-            <div class="col-4">
-                <a href="/">jack rich</a>
-            </div>
-
-            <div class="col-4">
-                <a href="contact.html">Contact&#8594;
-                </a>
-            </div>
-
-            <div class="col-4">
-                <a href="https://www.instagram.com">Instagram &#8599;</a>
-            </div>
-        </div>
-
-       <br/>
-        <div class="row">
-          <div class="col-4">
-           
-                <div class="project_card">
-                    <a href="project1.html">
-                    <img class="homepage_project_image" src="images/project1.jpg"/></a>
-                   <h4 class="project_card_name"><a href="project1.html">Glitch Art</a></h4>
-                    <p class="project_card_description">HxD and Audacity</p>
-                </div>
-          </div>
-          <div class="col-4">
-            <div class="project_card">
-                <img class="homepage_project_image" src="images/project2.jpg"/>
-                <h4 class="project_card_name"><a href="project2.html">Pattern Design</a></h4>
-                <p class="project_card_description">Illustrator</p>
-            </div>
-          </div>
-          <div class="col-4">
-            <div class="project_card">
-                <img class="homepage_project_image" src="images/project3.jpg"/>
-                <h4 class="project_card_name"><a href="project3.html">Postcard Project<a></h4>
-                <p class="project_card_description">Illustrator</p>
-            </div>
-          </div>
-           <div class="col-4">
-            <div class="project_card">
-                <img class="homepage_project_image" src="images/project4.jpg"/>
-                <h4 class="project_card_name"><a href="project4.html">Photoshop Collage</a></h4>
-                <p class="project_card_description">Photoshop</p>
-            </div>
-          </div>
-           <div class="col-4">
-            <div class="project_card">
-                <img class="homepage_project_image" src="images/project5.jpg"/>
-                <h4 class="project_card_name"><a href="project5.html">Create a New Species</a></h4>
-                <p class="project_card_description">Photoshop</p>
-            </div>
-          </div>
-           <div class="col-4">
-            <div class="project_card">
-                <img class="homepage_project_image" src="images/project1.jpg"/>
-                <h4 class="project_card_name"><a href="project6.html">Design an Alphabet</a></h4>
-                <p class="project_card_description">Photoshop</p>
-            </div>
-          </div>
-           <div class="col-4">
-            <div class="project_card">
-                <img class="homepage_project_image" src="images/project1.jpg"/>
-                <h4 class="project_card_name"><a href="project7.html">ChatGPT Comic</a></h4>
-                <p class="project_card_description">ChatGPT, Procreate, and Clip Studio Paint</p>
-            </div>
-          </div>
-          <div class="col-4">
-            <div class="project_card">
-                <img class="homepage_project_image" src="images/project1.jpg"/>
-                <h4 class="project_card_name">Project 8</h4>
-                <p class="project_card_description">Media Used (eg. Photoshop)</p>
-            </div>
-          </div>
-          <div class="col-4">
-            <div class="project_card">
-                <img class="homepage_project_image" src="images/project1.jpg"/>
-                <h4 class="project_card_name">Project 9</h4>
-                <p class="project_card_description">Media Used (eg. Photoshop)</p>
-            </div>
-          </div>
-        </div>
-      </div>
-
-
-
-
-   
+<nav class="main-menu">
+    <p class="name">jack rich</p>
+    <ul>
+        <li><a href="index.html">home</a></li>
+        <li><a href="#">portfolio</a>
+            <ul>
+                <li><a href="project1.html">glitch art</a></li>
+                <li><a href="project2.html">pattern design</a></li>
+                <li><a href="project3.html">postcard project</a></li>
+                <li><a href="project4.html">photoshop collage</a></li>
+                <li><a href="project5.html">create a new species</a></li>
+                <li><a href="project6.html">design an alphabet</a></li>
+                <li><a href="project7.html">chatgpt comic art</a></li>
+                <li><a href="project8.html">12 months of horror</a></li>
+                <li><a href="project9.html">the golden record</a></li>
+            </ul>
+        </li>
+        <li><a href="contact.html">contact</a></li>
+    </ul>
+</nav>
+<p class="main-text">welcome to my portfolio!</p>
+<img src="images/main_img.png" class="main-img"/>
+<p class="main-text">you can navigate using the menu bar.</p>
 </body>
+
+<footer>
+    <p class="main-footer"> i hope you enjoy your stay :)</p>
 </html>
