--- a/project1.html
+++ b/project1.html
@@ -9,39 +9,31 @@
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-    <div class="container">
-        <div class="row nav_bar">
-            <div class="col-4">
-                <a href="index.html">jack rich</a>
-            </div>
-
-            <div class="col-4">
-                <a href="mailto:email@gmail.com">Contact&#8594;
-                </a>
-            </div>
-
-            <div class="col-4">
-                <a href="https://www.instagram.com">Instagram &#8599;</a>
-            </div>
-        </div>
-
-
-        <div class="row project_page_description">
-            <div class="col-4">
-                <h3>Glitch Art</h3>
+        <nav class="main-menu">
+    <p class="name">jack rich</p>
+    <ul>
+        <li><a href="index.html">home</a></li>
+        <li><a href="#">portfolio</a>
+            <ul>
+                <li><a href="project1.html">glitch art</a></li>
+                <li><a href="project2.html">pattern design</a></li>
+                <li><a href="project3.html">postcard project</a></li>
+                <li><a href="project4.html">photoshop collage</a></li>
+                <li><a href="project5.html">create a new species</a></li>
+                <li><a href="project6.html">design an alphabet</a></li>
+                <li><a href="project7.html">chatgpt comic art</a></li>
+                <li><a href="project8.html">12 months of horror</a></li>
+                <li><a href="project9.html">the golden record</a></li>
+            </ul>
+        </li>
+        <li><a href="contact.html">contact</a></li>
+    </ul>
+</nav>
+                <h3 class="project-title">Glitch Art</h3>
                 <p class="project_tools">HxD</p>
                 <p class="project_tools">Audacity</p>
-            </div>
-            <div class="col-8">
-                <p>Our first project as a class, insert the rest of the description here later.</p>
-            </div>
-      </div>
-        <div class="row">
-            <div class="col-12">
-                <img src="images/GlitchArt_JackRich.jpg" width="1200px" height="1000px"/>
-               <!-- <p>caption this</p> -->
-            </div>
-        </div>
-        </div>
+                <p class="project-desc"> Our first project in Art 74, this was an exploration of the data behind digital images, where software was used to intentionally corrupt the file, resulting in interesting imagery.
+                </p>
+                <img src="images/GlitchArt_JackRich.jpg" width="1200px" height="1000px" alt="Glitch Art Project by Jack Rich" class="project-img"/>
     </body>
 </html>
