--- a/projecttemplate.html
+++ b/projecttemplate.html
@@ -29,9 +29,10 @@
         <li><a href="contact.html">contact</a></li>
     </ul>
 </nav>
-                <h3 class="project-title">Photoshop Collage</h3>
-                <p class="project_tools">Photoshop</p>
-                <p class="project-desc">As an introduction to Photoshop, we made these collages in class with a set of provided images.</p>
-                <img class="project-img" src="images/JackRich_Collage.jpg" alt="Photoshop Collage"/>
+                <h3 class="project-title">Project Title</h3>
+                <p class="project_tools">Pencil</p>
+                <p class="project_tools">Paper</p>
+                <p class="project-desc">Project Description: Vivamus vulputate elit ac mauris fermentum, at interdum risus vehicula. Maecenas id viverra purus. Aenean tempus dui in convallis porttitor. Morbi finibus lobortis elit sit amet fermentum. Cras rhoncus lorem accumsan nisl aliquam, vel elementum urna mollis. Aenean congue a velit vitae rhoncus. Praesent consequat et dolor in venenatis. Quisque vitae diam nisi. Aliquam eget nibh leo. Duis condimen</p>
+                <img class="project-img" src="https://www.macmillandictionary.com/us/external/slideshow/full/Grey_full.png"/>
     </body>
 </html>
