--- a/project6.html
+++ b/project6.html
@@ -32,6 +32,6 @@
                 <h3 class="project-title">Design an Alphabet</h3>
                 <p class="project_tools">Photoshop</p>
                 <p class="project-desc">Our final Photoshop project as a class imagined a scenerio in which we would make an alphabet out of some sort of found material. I chose pipes and plumbing, because I think they're neat.</p>
-                <img class="project-img" src="images/JackRich_A09.jpg" alt="Alphabet made of Plumbing."/>
+                <img class="project-img" src="images/jackRich_A09.jpg" alt="Alphabet made of Plumbing."/>
     </body>
 </html>
