--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </nav>
 <p class="main-text">welcome to my portfolio!</p>
 <img src="images/main_img.png" class="main-img"/>
-<p class="main-text">you can navigate using the menu bar.</p>
+<p class="main-text">you can navigate using the menu bar</p>
 </body>
 
 <footer>
