commit for art 75

--- a/75project1.html
+++ b/75project1.html
@@ -38,10 +38,10 @@
         <li><a href="contact.html">contact</a></li>
     </ul>
 </nav>
-                <h3 class="project-title">The Golden Record</h3>
-                <p class="project_tools">Photoshop</p>
-                <p class="project_tools">Audacity</p>
-                <p class="project-desc">This was our sound based project, combining sound effects into a 2 minute whole. I chose to combine (mostly) ambient sounds that I enjoy. We also made album covers in Photoshop.</p>
-                <iframe class="project-img" width="1280" height="1091" src="https://www.youtube.com/embed/odduRTEGoHM" title="the golden record" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <h3 class="project-title">Seeing through the Lens</h3>
+                <p class="project_tools">Premiere Pro</p>
+                <p class="project_tools">iPhone 12</p>
+                <p class="project-desc">This was our first project as a class, and it focused on finding an image with our camera. We held on a still shot without cutting for a minute. This also helped me feel a bit less awkward going out and filming in public. A bit, but not much.</p>
+                <iframe class="project-img" width="1280" height="720" src="https://www.youtube.com/embed/Pm-vfniw89Y" title="Seeing through the Lens" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </body>
 </html>
