--- a/75project2.html
+++ b/75project2.html
@@ -38,10 +38,10 @@
         <li><a href="contact.html">contact</a></li>
     </ul>
 </nav>
-                <h3 class="project-title">The Golden Record</h3>
-                <p class="project_tools">Photoshop</p>
-                <p class="project_tools">Audacity</p>
-                <p class="project-desc">This was our sound based project, combining sound effects into a 2 minute whole. I chose to combine (mostly) ambient sounds that I enjoy. We also made album covers in Photoshop.</p>
-                <iframe class="project-img" width="1280" height="1091" src="https://www.youtube.com/embed/odduRTEGoHM" title="the golden record" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <h3 class="project-title">Going Somewhere</h3>
+                <p class="project_tools">Premiere Pro</p>
+                <p class="project_tools">iPhone 12</p>
+                <p class="project-desc">Our second project reintroduced me to the world of editing. I feel much more at home behind a computer screen than behind a camera, so I decided to focus on the editing portion of this project. It's far from perfect, and doesn't actually make all that much sense, but I enjoyed making it and using masks for the first time.</p>
+                <iframe class="project-img" width="1280" height="720" src="https://www.youtube.com/embed/VVrVXjvPSRk" title="Going Somewhere" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </body>
 </html>
