--- a/75project3.html
+++ b/75project3.html
@@ -38,10 +38,11 @@
         <li><a href="contact.html">contact</a></li>
     </ul>
 </nav>
-                <h3 class="project-title">The Golden Record</h3>
-                <p class="project_tools">Photoshop</p>
-                <p class="project_tools">Audacity</p>
-                <p class="project-desc">This was our sound based project, combining sound effects into a 2 minute whole. I chose to combine (mostly) ambient sounds that I enjoy. We also made album covers in Photoshop.</p>
-                <iframe class="project-img" width="1280" height="1091" src="https://www.youtube.com/embed/odduRTEGoHM" title="the golden record" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <h3 class="project-title">sorry, i couldn't go out and film for this project</h3>
+                <p class="project_tools">Premiere Pro</p>
+                <p class="project_tools">After Effects</p>
+                <p class="project_tools">iPhone 12</p>
+                <p class="project-desc">I've been trapped in this room for 59 days but at least I got to work on this masking project. I used this one as an excuse to learn After Effects, and though my work is far from perfect I never could have imagined doing something like this before this class!</p>
+               <iframe class="project-img" width="663" height="1179" src="https://www.youtube.com/embed/BdiWIByzj0o" title="Sorry I couldn&#39;t go out and film for this project" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </body>
 </html>
