--- a/75project4.html
+++ b/75project4.html
@@ -38,10 +38,12 @@
         <li><a href="contact.html">contact</a></li>
     </ul>
 </nav>
-                <h3 class="project-title">The Golden Record</h3>
-                <p class="project_tools">Photoshop</p>
-                <p class="project_tools">Audacity</p>
-                <p class="project-desc">This was our sound based project, combining sound effects into a 2 minute whole. I chose to combine (mostly) ambient sounds that I enjoy. We also made album covers in Photoshop.</p>
-                <iframe class="project-img" width="1280" height="1091" src="https://www.youtube.com/embed/odduRTEGoHM" title="the golden record" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <h3 class="project-title">Realizations</h3>
+                <p class="project_tools">Premiere Pro</p>
+                <p class="project_tools">After Effects</p>
+                <p class="project_tools">Clip Studio Paint</p>
+                <p class="project_tools">iPhone 12</p>
+                <p class="project-desc">For my final project in Art 75, I chose to experiment with combining live action video with animation. This turned out to be a bit much, and the project is still in a state I would describe as incomplete. I chose to move on, because I believe that it speaks for itself, and I was proud of what it taught me.</p>
+                <iframe class="project-img" width="663" height="1179" src="https://www.youtube.com/embed/Z1H6jqjZ4yE" title="realizations" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </body>
 </html>
