--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <p class="name">jack rich</p>
     <ul>
         <li><a href="index.html">home</a></li>
-        <li><a href="#">portfolio</a>
+        <li><a href="#">art 74</a>
             <ul>
                 <li><a href="project1.html">glitch art</a></li>
                 <li><a href="project2.html">pattern design</a></li>
@@ -27,6 +27,15 @@
                 <li><a href="project9.html">the golden record</a></li>
             </ul>
         </li>
+        <li><a href="#">art 75</a>
+            <ul>
+                <li><a href="75project1.html">seeing through the lens</a></li>
+                <li><a href="75project2.html">going somewhere</a></li>
+                <li><a href="75project3.html">sorry, i couldn't go out and film for this project</a></li>
+                <li><a href="75project4.html">realizations</a></li>
+            </ul>
+        </li>
+       
         <li><a href="contact.html">contact</a></li>
     </ul>
 </nav>
