--- a/projecttemplate.html
+++ b/projecttemplate.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-        <nav class="main-menu">
+<nav class="main-menu">
     <p class="name">jack rich</p>
     <ul>
         <li><a href="index.html">home</a></li>
-        <li><a href="#">portfolio</a>
+        <li><a href="#">art 74</a>
             <ul>
                 <li><a href="project1.html">glitch art</a></li>
                 <li><a href="project2.html">pattern design</a></li>
@@ -26,13 +26,21 @@
                 <li><a href="project9.html">the golden record</a></li>
             </ul>
         </li>
+        <li><a href="#">art 75</a>
+            <ul>
+                <li><a href="75project1.html">seeing through the lens</a></li>
+                <li><a href="75project2.html">going somewhere</a></li>
+                <li><a href="75project3.html">sorry, i couldn't go out and film for this project</a></li>
+                <li><a href="75project4.html">realizations</a></li>
+            </ul>
+        </li>
+       
         <li><a href="contact.html">contact</a></li>
     </ul>
 </nav>
-                <h3 class="project-title">Project Title</h3>
-                <p class="project_tools">Pencil</p>
-                <p class="project_tools">Paper</p>
-                <p class="project-desc">Project Description: Vivamus vulputate elit ac mauris fermentum, at interdum risus vehicula. Maecenas id viverra purus. Aenean tempus dui in convallis porttitor. Morbi finibus lobortis elit sit amet fermentum. Cras rhoncus lorem accumsan nisl aliquam, vel elementum urna mollis. Aenean congue a velit vitae rhoncus. Praesent consequat et dolor in venenatis. Quisque vitae diam nisi. Aliquam eget nibh leo. Duis condimen</p>
-                <img class="project-img" src="https://www.macmillandictionary.com/us/external/slideshow/full/Grey_full.png"/>
+                <h3 class="project-title">12 Months of Horror</h3>
+                <p class="project_tools">Premiere Pro</p>
+                <p class="project-desc">This was a project we did to learn Premiere Pro, and video editing in general. The brief was to tell the story of a year through found media clips, I chose to combine two of my interests and make it about the history of horror movies.</p>
+                <iframe class="project-img" width="1280" height="720" src="https://www.youtube.com/embed/kXh7GQ0xHJc" title="12 Months of Horror" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </body>
 </html>
