--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,38 @@
     <link rel="stylesheet" href="styles/simple-grid.css">
     <link rel="stylesheet" href="styles/main.css">
 </head>
+<body class="home-bg">
+
+<nav class="main-menu">
+    <p class="name">jenna rich</p>
+    <ul>
+        <li><a href="index.html">home</a></li>
+        <li><a href="#">art 74</a>
+            <ul>
+                <li><a href="project1.html">glitch art</a></li>
+                <li><a href="project2.html">pattern design</a></li>
+                <li><a href="project3.html">postcard project</a></li>
+                <li><a href="project4.html">photoshop collage</a></li>
+                <li><a href="project5.html">create a new species</a></li>
+                <li><a href="project6.html">design an alphabet</a></li>
+                <li><a href="project7.html">chatgpt comic art</a></li>
+                <li><a href="project8.html">12 months of horror</a></li>
+                <li><a href="project9.html">the golden record</a></li>
+            </ul>
+        </li>
+        <li><a href="#">art 75</a>
+            <ul>
+                <li><a href="75project1.html">seeing through the lens</a></li>
+                <li><a href="75project2.html">going somewhere</a></li>
+                <li><a href="75project3.html">sorry, i couldn't go out and film for this project</a></li>
+                <li><a href="75project4.html">realizations</a></li>
+            </ul>
+        </li>
+       
+        <li><a href="contact.html">contact</a></li>
+    </ul>
+</nav>
+
 <body class="contact-bg">
-        <h3 class="contact-oops"> this is gonna be the contact page but it isn't ready yet, click <a href="index.html">here</a> to go back home</h3>
+    <h3>There isn't anything here yet, sorry! In the future, work I make outside of class will be posted to my <a href="https://github.com/ectospectral">github</a>,<a href="https://ectospectral.itch.io/">itch.io</a>, or <a href="https://www.instagram.com/ectospectral/">instagram</a></h3>
 </body>
