--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class="home-bg">
 
 <nav class="main-menu">
-    <p class="name">jack rich</p>
+    <p class="name">jenna rich</p>
     <ul>
         <li><a href="index.html">home</a></li>
         <li><a href="#">art 74</a>
@@ -45,5 +45,7 @@
 </body>
 
 <footer>
+   
+   
     <p class="main-footer"> i hope you enjoy your stay :)</p>
 </html>
