--- a/project3.html
+++ b/project3.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <nav class="main-menu">
-    <p class="name">jack rich</p>
+    <p class="name">jenna rich</p>
     <ul>
         <li><a href="index.html">home</a></li>
         <li><a href="#">art 74</a>
