--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="styles/simple-grid.css">
     <link rel="stylesheet" href="styles/main.css">
 </head>
-<body class="home-bg">
 
 <nav class="main-menu">
     <p class="name">jenna rich</p>
@@ -40,6 +39,8 @@
     </ul>
 </nav>
 
+
 <body class="contact-bg">
-    <h3>There isn't anything here yet, sorry! In the future, work I make outside of class will be posted to my <a href="https://github.com/ectospectral">github</a>,<a href="https://ectospectral.itch.io/">itch.io</a>, or <a href="https://www.instagram.com/ectospectral/">instagram</a></h3>
+        <h3 class="contact-oops"> There isn't anything here yet, sorry! In the future, work I make outside of class will be posted to my <a href="https://github.com/ectospectral">github</a>, <a href="https://ectospectral.itch.io/">itch.io</a>, or <a href="https://www.instagram.com/ectospectral/">instagram</a>
+</h3>
 </body>
