--- a/project8.html
+++ b/project8.html
@@ -7,6 +7,8 @@
     <title>:)</title>
     <link rel="stylesheet" href="styles/simple-grid.css">
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="icon" type="image/png" href="images/portfolio_favicon.png">
+
 </head>
 <body>
 <nav class="main-menu">
@@ -32,6 +34,11 @@
                 <li><a href="75project2.html">going somewhere</a></li>
                 <li><a href="75project3.html">sorry, i couldn't go out and film for this project</a></li>
                 <li><a href="75project4.html">realizations</a></li>
+            </ul>
+        </li>
+        <li><a href="#">other work</a>
+            <ul>
+                <li><a href="pong/pong.html">p5ong</a></li>
             </ul>
         </li>
        
