--- a/pixel_art.html
+++ b/pixel_art.html
@@ -46,9 +46,13 @@
         <li><a href="contact.html">contact</a></li>
     </ul>
 </nav>
-                <h3 class="project-title">Create a New Species</h3>
-                <p class="project_tools">Photoshop</p>
-                <p class="project-desc">This was a project designed to learn more about Photoshop, and blending images together in general. Also, just a fun time!</p>
-                <img class="project-img" src="images/JackRich_A08.jpg" alt="Now that's what I call a new species"/>
-    </body>
+                <h3 class="project-title">Pixel Art Examples</h3>
+                <p class="project_tools">Clip Studio Paint (I think?)</p>
+                <p class="project-desc">Just some old, kind of embarrassing pixel art for a project with some friends years ago now (probably 2019?). This might get replaced or added onto if I make something I'm happier with.</p>
+                <img class="pixel-img" width="200px" height="200px" src="images/Cultist.png" alt="An evil wizard or something"/> 
+                <img class="pixel-img" width="200px" height="200px" src="images/Pheonix.png" alt="A cowboy."/>    </body>
+                <img class="pixel-img" width="200px" height="200px" src="images/Pheonix_Back.png" alt="A cowboy (back)."/>    </body>
+            
+            
+            </body>
 </html>
