--- a/75project1.html
+++ b/75project1.html
@@ -38,6 +38,7 @@
         <li><a href="#">other work</a>
             <ul>
                 <li><a href="pong/pong.html">p5ong</a></li>
+                <li><a href="pixel_art.html">pixel art</a></li>
             </ul>
         </li>
        
