--- a/project9.html
+++ b/project9.html
@@ -39,6 +39,7 @@
         <li><a href="#">other work</a>
             <ul>
                 <li><a href="pong/pong.html">p5ong</a></li>
+                <li><a href="pixel_art.html">pixel art</a></li>
             </ul>
         </li>
        
