--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
         <li><a href="#">other work</a>
             <ul>
                 <li><a href="pong/pong.html">p5ong</a></li>
-                <li><a href="pixel_art.html">pixel art</a></li>
+                <li><a href="3d.html">3D models</a></li>
             </ul>
         </li>
        
@@ -49,6 +49,6 @@
 
 
 <body class="contact-bg">
-        <h3 class="contact-oops"> There isn't anything here yet, sorry! In the future, work I make outside of class will be posted to my <a href="https://github.com/ectospectral">github</a>, <a href="https://ectospectral.itch.io/">itch.io</a>, or <a href="https://www.instagram.com/ectospectral/">instagram</a>
+        <h3 class="contact-oops"> There isn't anything here yet, sorry! In the future, work I make outside of class will be posted to my <a href="https://github.com/ectospectral">github</a> or <a href="https://www.instagram.com/ectospectral/">instagram</a>
 </h3>
 </body>
