--- a/pong/pong.html
+++ b/pong/pong.html
@@ -40,7 +40,7 @@
         <li><a href="#">other work</a>
             <ul>
                 <li><a href="pong.html">p5ong</a></li>
-                <li><a href="../pixel_art.html">pixel art</a></li>
+                <li><a href="../3d.html">3D models</a></li>
             </ul>
         </li>
 
@@ -51,5 +51,4 @@
 
         <h3 class="project-title">P5ong</h3>
                 <p class="project_tools">p5.js</p>
-                <p class="project_tools">ChatGPT</p>
                 <p class="project-desc">Just something I made for fun, enjoy! I'm new to p5 and coding in general, so this is a very rough first attempt, but everyone has to start somewhere! player 1 (left) uses the W and S keys, player 2 (right) uses the I and K keys. It just goes on forever so feel free to play as long as you like! <a href="sketch.js"> see the code</a></p>
